# dirttrack

./: cloudtrail_to_parquet.py  pyproject.toml
examples/: duckdb-example.py  duckdb.sh  pandas-example.py  spark-dataframe.py  spark-sql.sh  sqlite-example.py
src/dirttrack/: cloudtrail_to_parquet.py  common.py  gitlab_audit_to_parquet.py
