[project]
name = "dirttrack"
version = "0.0.1"
description = "CloudTrail slop"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloudtrail_to_parquet.py"]

[project.scripts]
cloudtrail-to-parquet = "cloudtrail_to_parquet:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyarrow-stubs",
]
