[project]
name = "dirttrack"
version = "0.0.1"
description = "CloudTrail slop"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0",
    "rich>=14.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dirttrack"]

[project.scripts]
cloudtrail-to-parquet = "dirttrack.cloudtrail_to_parquet:main"
gitlab-audit-to-parquet = "dirttrack.gitlab_audit_to_parquet:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyarrow-stubs",
    "pyspark",
    "pandas",
    "duckdb>=1.5.2",
]
